# Nemesis_Defender_v2.0

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  Nemesis Defender Validation.md  PROMPT-DEFINITIVO-NEMESIS.md  PROMPT-FOLLOWUP-CALIBRACAO-NEMESIS.md  PROMPT-MANUTENCAO-NEMESIS.md  README.md  TAREFAS-MANUAIS-SEGURANCA.txt  config.yml  index.html  install.sh  release-terminal-mac.txt  resultado-install-mac.txt
.nemesis/ast-linters/: Cargo.toml  build.rs  info.md  rules.toml
.nemesis/ast-linters/src/: language.rs  lib.rs  lint_rule.rs  parser.rs  rule_wrappers.rs
.nemesis/ast-linters/src/semantic/: binding.rs  mod.rs  model.rs  reference.rs  scope.rs
.nemesis/ast-linters/src/visitors/: any_via_alias.rs  conditional_hooks.rs  exhaustive_deps.rs  fetch_in_component.rs  jsx_no_target_blank.rs  mod.rs  no_assign_in_expressions.rs  no_async_promise_executor.rs  no_await_in_loops.rs  no_console.rs  no_constant_condition.rs  no_dangerously_set_inner_html.rs  no_debugger.rs  no_double_equals.rs  no_duplicate_case.rs  no_duplicate_jsx_props.rs  no_empty_block_statements.rs  no_empty_pattern.rs  no_extra_boolean_cast.rs  no_fallthrough_switch_clause.rs  no_floating_promises.rs  no_global_eval.rs  no_impure_in_render.rs  no_secrets.rs  no_set_state_in_effect.rs  no_switch_declarations.rs  no_template_curly_in_string.rs  no_unsafe_assignment.rs  no_unsafe_finally.rs  no_unsafe_optional_chaining.rs  no_var.rs  no_void_type_return.rs  prefer_readonly.rs  unused_vars.rs
.nemesis/ast-linters/tests/: generated_rules.rs
.nemesis/nemesis-defender/: Cargo.toml  info.md
.nemesis/nemesis-defender/config/: denylist-defender.json
.nemesis/nemesis-defender/src/: language.rs  lib.rs  main.rs  pid.rs  quarantine.rs  reporter.rs  shell_hook.rs
.nemesis/nemesis-defender/src/scanner/: ast_scanner.rs  byte_scanner.rs  decoder.rs  denylist_loader.rs  entropy.rs  manifest_scanner.rs  mod.rs  (+1 more)
.nemesis/nemesis-defender/tests/: m1_credential_harvest_extended.rs  m2_exfil_chain.rs  m3_m4_ide_config_poisoning.rs  m5_taint_tracking.rs  pentest_integration.rs  pentest_integration_v1.rs  pentest_integration_v2.rs  pentest_integration_v3.rs
(+129 files in other folders)
